[tool.poetry]
name = "bdc"
version = "0.1.0"
description = "Burns Depression Checklist Script"
authors = ["tariq <tariqroxxin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
pysqlite3 = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
